editor style fixes, align wide

--- a/wp-content/themes/ignite/_assets/scss/editor-styles.scss
+++ b/wp-content/themes/ignite/_assets/scss/editor-styles.scss
@@ -127,12 +127,18 @@ body {
 		max-width: 100vw;
 	}
 
+	.is-root-container,
+	.wp-block-post-content {
+		container-type: inline-size;
+	}
+
+	.block-editor-block-list__layout.is-root-container .alignwide,
 	.alignwide,
 	.wide_width {
-		width: 86vw;
+		width: 85cqw;
 		max-width: 1500px;
-		margin-left: auto;
-		margin-right: auto;
+		margin-left: 5cqw !important;
+		margin-right: 5cqw!important;
 	}
 
 	#main main.singular_page > p,
